# frakt-rs

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
cli/src/commands/server/: mod.rs
cli/src/commands/worker/: mod.rs
complex-rs/src/: complex.rs
server/: Cargo.toml
server/src/: lib.rs  metrics.rs  server_state.rs
server/src/portal/: mod.rs
server/src/portal/ws/: fragment_processor.rs  mod.rs
server/src/portal/ws/handlers/: mod.rs
server/src/portal/ws/messages/: mod.rs  rendering_data.rs
server/src/portal/ws/processors/: fragment_processor.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/dtos/: mod.rs  rendering_data.rs  server_dto.rs
shared/src/graphics/: mod.rs
shared/src/logger/: mod.rs
shared/src/models/: mod.rs
shared/src/models/fractal/: fractal_descriptor.rs  iterated_sin_z.rs  julia.rs  mandelbrot.rs  mod.rs  newton_raphson_3.rs  newton_raphson_4.rs
shared/src/models/fragments/: fragment_result.rs  fragment_task.rs  mod.rs
shared/src/models/pixel/: mod.rs  pixel_data.rs  pixel_intensity.rs
shared/src/models/point/: mod.rs
shared/src/models/range/: mod.rs
shared/src/models/resolution/: mod.rs
shared/src/models/u8_data/: mod.rs
shared/src/networking/: error.rs  mod.rs  server.rs
shared/src/rendering/: color.rs  mod.rs
worker/: Cargo.toml
worker/src/: lib.rs  main.rs
