[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
worker = { path = "../worker" }
shared = { path = "../shared" }
clap = { version = "4.4.13", features = ["derive"] }
